@@ -20,12 +20,15 @@ REQUIREMENTS
 	fftw3 >= 3.2
 	gdbm >= 1.8
 	swig >= 1.3
+	setuptools >= 0.6.10
 	numpy >= 1.2
 	scipy >= 0.7
+	jinja2 >= 2.3
 	pyfits >= 2.1
 	pyephem >= 3.7.3
 	aipy >= 0.9.1
 	*matplotlib >= 0.98.3
+	*paramiko >= 1.7.6
 	(* required for some of the scripts)
 
 	In addition, the libnova C library is required.  This is an astronomical
