@@ -95,6 +95,30 @@ def get_atlas():
 		return outLibs
 
 
+def write_version_info():
+	"""Write the version info to a module in LSL."""
+	
+	lslVersion = get_version()
+	shortVersion = '.'.join(lslVersion.split('.')[:2])
+	
+	contents = """# -*- coding: utf-8 -*-
+# This file is automatically generated by setup.py
+
+version = '%s'
+full_version = '%s'
+short_version = '%s'
+
+""" % (lslVersion, lslVersion, shortVersion)
+
+
+	
+	fh = open('lsl/version.py', 'w')
+	fh.write(contents)
+	fh.close()
+	
+	return True
+
+
 class LSLDist(Distribution):
 	"""Sub-class of setupuptools (distutils.core) Distribution class that fixes
 	problems building the libnova extension."""
@@ -143,6 +167,9 @@ else:
 	if platform.architecture()[0] != '64bit':
 		print "WARNING: python build does not appear to be 64-bit, skipping _drsu extension"
 		del(ExtensionModules[-1])
+
+# Update the version information
+write_version_info()
 
 setup(
 	distclass = LSLDist, 
